# titan-v

./: .gitignore  Cargo.toml  need.md  titan-center  titan-host
apps/titan-center/: Cargo.toml  build.rs
apps/titan-center/src/: lib.rs  main.rs
apps/titan-center/src/app/: center_app_net.rs  center_app_ticks.rs  center_paths.rs  constants.rs  device_store.rs  discovery.rs  lan_host_register.rs  mod.rs  net_client.rs  net_msg.rs  panels_misc.rs  panels_monitor.rs  persist_data.rs  theme.rs  vm_window_create_dialog.rs  vm_window_db.rs  vm_window_push_to_hosts.rs
apps/titan-center/src/app/center_shell/: bootstrap.rs  frame_tick.rs  mod.rs  net_inbox.rs  net_lan.rs  net_loop.rs  paint.rs  persist_session.rs  tofu.rs
apps/titan-center/src/app/center_shell/bootstrap/: persist_load.rs  security.rs
apps/titan-center/src/app/center_shell/net_inbox/: add_host.rs  fleet_error.rs  host_data.rs  inventory.rs  telemetry.rs
apps/titan-center/src/app/device_store/: schema.rs
apps/titan-center/src/app/net/: client.rs  mod.rs  msg.rs  quic_client.rs  tcp_tune.rs
apps/titan-center/src/app/panels_hosts/: add_host_dialog.rs  device_card.rs  host_config_window.rs  panel.rs
apps/titan-center/src/app/spawn/: add_host_verify.rs  common.rs  desktop_cycle.rs  fleet.rs  hello_vms.rs  mod.rs  reachability.rs  telemetry.rs  ui_lang_hosts.rs
apps/titan-center/src/app/ui/: control_panel.rs  inventory_panel.rs  misc_panel.rs  mod.rs  monitor_panel.rs  mtls_panel.rs  theme.rs  window_mgmt_panel.rs
apps/titan-center/src/app/vm_window_create_dialog/: draft.rs  panel.rs
apps/titan-center/tests/: center_vm_window_db.rs  vm_window_db_and_push.rs
apps/titan-host/: Cargo.toml  build.rs
apps/titan-host/src/: agent_binding_table.rs  agent_bindings.rs  config.rs  debug_agent_log.rs  desktop_snapshot.rs  desktop_snapshot_win.rs  driver_bridge.rs  host_font.rs  host_paths.rs  host_resources.rs  host_runtime_probes.rs  lib.rs  main.rs  tcp_tune.rs  ui_persist.rs  vm_window_local.rs  vm_window_notify.rs
apps/titan-host/src/control_plane/: mod.rs
apps/titan-host/src/host_app/: constants.rs  eframe_impl.rs  mod.rs  model.rs  theme.rs  vm_window_grid_metrics.rs
apps/titan-host/src/host_app/panels/: mod.rs  service.rs  window_mgmt.rs
apps/titan-host/src/host_app/shell/: egui_frame.rs  mod.rs  serve_bootstrap.rs
apps/titan-host/src/host_app/ui/: chrome.rs  mod.rs  theme.rs
apps/titan-host/src/host_app/vm_window_device_card_clone/: device_card_dup.rs  mod.rs
apps/titan-host/src/serve/: announce.rs  apply_host_ui.rs  dispatch.rs  io.rs  limits.rs  mod.rs  response.rs  run.rs  state.rs  telemetry.rs  telemetry_loops.rs  vm_window_remote.rs
apps/titan-host/src/serve/announce/: sidecars.rs
apps/titan-host/src/serve/dispatch/: host_snapshot.rs
apps/titan-host/tests/: quic_apply_vm_window_snapshot.rs  serve_apply_spoof_profile.rs  serve_apply_vm_window_snapshot.rs  serve_hello.rs  serve_multiframe.rs  serve_ping.rs
crates/titan-center/: Cargo.toml
crates/titan-center/src/: main.rs
crates/titan-center/src/app/: center_app_net_inbox.rs  center_app_net_lan.rs  center_app_new.rs  center_app_render.rs  center_app_session.rs  constants.rs  device_store.rs  discovery.rs  fleet_state.rs  i18n.rs  lan_host_register.rs  mod.rs  net_client.rs  net_msg.rs  panels_control.rs  panels_danger.rs  panels_hosts.rs  panels_inventory.rs  panels_misc.rs  panels_monitor.rs  panels_spoof.rs  persist_data.rs  spawn.rs  theme.rs  widgets.rs
crates/titan-center/src/app/i18n/: mod.rs  msg.rs  strings_part1.rs  strings_part2.rs  strings_part3.rs  strings_part4.rs
crates/titan-center/src/app/panels_hosts/: add_host_dialog.rs  device_card.rs  helpers.rs  host_config_panel.rs  host_config_window.rs  mod.rs  panel.rs
crates/titan-center/src/app/spawn/: add_host_verify.rs  hello_vms.rs  hello_vms_spoof_power.rs  mod.rs  telemetry.rs
crates/titan-common/: Cargo.toml
crates/titan-common/src/: capabilities.rs  discovery.rs  error.rs  lib.rs  need_mapping.rs  net_iface.rs  net_ipv4.rs  plan.rs  proxy_pool.rs  state.rs  stubs.rs  transport.rs  ui_lang.rs  vm_window.rs
crates/titan-common/src/wire/: codec.rs  compress.rs  fleet_rkyv.rs  frame_bytes.rs  mod.rs  tests.rs  types.rs
crates/titan-common/tests/: slo_control_plane_frame_decode.rs
crates/titan-host/: Cargo.toml
crates/titan-host/src/: agent_bindings.rs  batch.rs  capture.rs  config.rs  desktop_snapshot.rs  desktop_snapshot_win.rs  driver_bridge.rs  host_app.rs  host_device_id.rs  host_font.rs  host_runtime_probes.rs  lib.rs  main.rs  orchestrator.rs  runtime.rs  ui_persist.rs  windivert.rs
crates/titan-host/src/host_app/: chrome.rs  constants.rs  eframe_impl.rs  mod.rs  model.rs  new_serve.rs
crates/titan-host/src/host_app/panels/: batch.rs  mod.rs  service.rs
crates/titan-host/src/serve/: announce.rs  apply_host_ui.rs  dispatch.rs  errors.rs  io.rs  limits.rs  mod.rs  power.rs  quic_fleet.rs  run.rs  state.rs  telemetry.rs
crates/titan-host/tests/: script_smoke.rs  serve_apply_spoof_profile.rs  serve_hello.rs  serve_multiframe.rs  serve_ping.rs  serve_register_guest_agent.rs
crates/titan-host/tests/fixtures/: host.phase1.example.toml
crates/titan-offline-spoof/: Cargo.toml
crates/titan-offline-spoof/src/: lib.rs  main.rs
crates/titan-quic/: Cargo.toml
crates/titan-quic/src/: alpn.rs  asn1.rs  endpoint.rs  frame_io.rs  identity.rs  lib.rs  pairing.rs  trust_store.rs  verifier.rs
crates/titan-tray/: Cargo.toml
crates/titan-tray/src/: egui.rs  icon.rs  lib.rs  menu.rs  serve.rs  serve_win.rs  theme.rs
crates/titan-tray/src/icon/: draw.rs  font.rs  geom.rs  mod.rs  tray_pix.rs
crates/titan-vmm/: Cargo.toml
crates/titan-vmm/src/: lib.rs  platform_vm.rs  traits.rs
crates/titan-vmm/src/hvf/: mod.rs
crates/titan-vmm/src/hyperv/: gpu_pv.rs  guest_agent.rs  host_runtime.rs  mod.rs  windows.rs
crates/titan-vmm/src/hyperv/mother_image/: apply.rs  audit.rs  mod.rs  plan.rs  probe.rs  ps.rs  step_apply.rs  vm_power.rs
crates/titan-vmm/src/kvm/: mod.rs  virsh_shell.rs
crates/titan-vmm/src/mac/: mod.rs
packaging/: release.sh
(+63 files in other folders)
