[workspace]
resolver = "2"
members = [
    "crates/titan-common",
    "crates/titan-egui-widgets",
    "crates/titan-i18n",
    "crates/titan-tray",
    "crates/titan-vmm",
    "crates/titan-scripts",
    "crates/titan-driver",
    "crates/titan-host",
    "crates/titan-center",
    "crates/titan-offline-spoof",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
