[package]
name = "titan-center"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Center manager desktop app (egui) with SQLite-backed config."
default-run = "titan-center"
build = "build.rs"

# Primary packaging: Windows (NSIS) — `cargo packager ... --formats nsis` (requires `makensis` on PATH).
# Optional: macOS `... --formats dmg`. Linux: `cargo build --release -p titan-center` (tray depends on DE; no packager recipe here).
[package.metadata.packager]
product-name = "Titan Center"
identifier = "dev.titanv.center"

[lib]
name = "titan_center"
path = "src/lib.rs"

[[bin]]
name = "titan-center"
path = "src/main.rs"

[dependencies]
titan-common = { path = "../../crates/titan-common" }
titan-egui-widgets = { path = "../../crates/titan-egui-widgets" }
titan-i18n = { path = "../../crates/titan-i18n" }
anyhow = "1.0"
eframe = { version = "0.31" }
egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
tokio = { version = "1.43", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
if-addrs = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
fontdb = "0.23"
titan-tray = { path = "../../crates/titan-tray", features = ["egui"] }

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"

[dev-dependencies]
tempfile = "3"
