[package]
name = "titan-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Host node: egui settings + TCP/QUIC control-plane server (`titan_host::serve`, `titan_host::control_plane`)."

# See `titan-center` crate for packaging notes (`cargo-packager`).
[package.metadata.packager]
product-name = "Titan Host"
identifier = "dev.titanv.host"

# Main window + tray; show in Dock when foregrounded.
[package.metadata.packager.macos]
background_app = false

[lib]
name = "titan_host"
path = "src/lib.rs"

[[bin]]
name = "titan-host"
path = "src/main.rs"

[dependencies]
titan-common = { path = "../../crates/titan-common" }
titan-egui-widgets = { path = "../../crates/titan-egui-widgets" }
titan-i18n = { path = "../../crates/titan-i18n" }
titan-tray = { path = "../../crates/titan-tray", features = ["egui"] }
eframe = { version = "0.31" }
egui = "0.31"
fontdb = "0.23"
if-addrs = "0.15"
anyhow = "1.0"
whoami = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
screenshots = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
thiserror = "2.0"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.43", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
sysinfo = { version = "0.33", default-features = false, features = ["system", "disk", "network"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
machine-uid = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }

[dev-dependencies]
tempfile = "3"
