[package]
name = "titan-center"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Center manager UI shell (egui)."

[[bin]]
name = "titan-center"
path = "src/main.rs"

[dependencies]
titan-common = { path = "../titan-common" }
anyhow = "1.0"
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["io-util", "macros", "net", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
fontdb = "0.23"
