[package]
name = "titan-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, errors, and placeholder interfaces for Titan-v."

[dependencies]
postcard = { version = "1.1", features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
