[package]
name = "titan-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, errors, and placeholder interfaces for Titan-v."

[dependencies]
bytes = "1.5"
if-addrs = "0.15"
rkyv = { version = "0.8", default-features = false, features = ["std", "alloc", "bytecheck"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
