[package]
name = "titan-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Host node: local multi-VM management; delegates virtualization to titan-vmm."

[lib]
name = "titan_host"
path = "src/lib.rs"

[[bin]]
name = "titan-host"
path = "src/main.rs"

[dependencies]
titan-common = { path = "../titan-common" }
titan-driver = { path = "../titan-driver" }
titan-scripts = { path = "../titan-scripts" }
titan-vmm = { path = "../titan-vmm" }
anyhow = "1.0"
dashmap = "6.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.43", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
