[package]
name = "titan-offline-spoof"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Offline VHDX / registry hive tooling for mother-image workflows (feature-gated; Phase 2B)."

[features]
default = []
## Future: mount VHDX, edit SYSTEM/SOFTWARE hives, Sysprep hooks — not compiled in default CI.
offline-hive = []

[[bin]]
name = "titan-offline-spoof"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
