[package]
name = "titan-offline-spoof"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Offline VHDX / registry hive tooling for mother-image workflows (feature-gated; Phase 2B)."

[features]
default = []
## Future: mount VHDX, edit SYSTEM/SOFTWARE hives, Sysprep hooks — not compiled in default CI.
offline-hive = []
