[package]
name = "titan-quic"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Titan-v shared QUIC + mTLS transport (quinn endpoints, self-signed identity, fingerprint trust)."

[lib]
name = "titan_quic"
path = "src/lib.rs"

[dependencies]
titan-common = { path = "../titan-common" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pki-types = "1"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
time = "0.3"
base64ct = { version = "1.6", features = ["alloc"] }
ring = "0.17"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "2"
tokio = { version = "1.43", features = ["rt", "sync", "io-util", "time", "macros"] }
parking_lot = "0.12"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.43", features = ["rt", "sync", "io-util", "time", "macros", "rt-multi-thread", "net"] }
