[package]
name = "titan-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared system tray (tray-icon) for Titan desktop binaries."

[features]
default = []
egui = ["dep:egui"]
tokio = ["dep:tokio"]

[dependencies]
fontdb = { version = "0.23", default-features = true }
fontdue = "0.9"
titan-common = { path = "../titan-common" }
titan-i18n = { path = "../titan-i18n" }
tray-icon = { version = "0.19", features = ["common-controls-v6"] }
tracing = "0.1"

[dependencies.egui]
version = "0.31"
optional = true

[dependencies.tokio]
version = "1.43"
optional = true
default-features = false
features = ["sync"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", default-features = false, features = [
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = "0.2"
libc = "0.2"
objc2 = { version = "0.6", default-features = false }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSApplication",
    "NSRunningApplication",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = ["CFRunLoop", "CFDate"] }
